Fix #93930. Increase zindex for all overflowing widgets.

--- a/src/vs/workbench/contrib/notebook/browser/media/notebook.css
+++ b/src/vs/workbench/contrib/notebook/browser/media/notebook.css
@@ -21,7 +21,7 @@
 	overflow: visible !important;
 } */
 
-.monaco-workbench .part.editor > .content .notebook-editor .cell-list-container .monaco-editor-hover {
+.monaco-workbench .part.editor > .content .notebook-editor .cell-list-container .overflowingContentWidgets > div {
 	z-index: 600 !important; /* @rebornix: larger than the editor title bar */
 }
 
